kubernetes/digital-ocean/ingress/ghost-ingress-plain.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost-ingress-plain
spec:
  rules:
  - host: ghost.callbackinsanity.com
    http:
      paths:
      - backend:
          serviceName: ghost
          servicePort: 80
