kubernetes/digital-ocean/ingress/ghost-ingress-tls-prod.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - cms.callbackinsanity.com
    - ghost.callbackinsanity.com
    secretName: letsencrypt-prod
  rules:
  - host: ghost.callbackinsanity.com
    http:
      paths:
      - backend:
          serviceName: ghost
          servicePort: 80
  - host: cms.callbackinsanity.com
    http:
      paths:
      - backend:
          serviceName: ghost
          servicePort: 80
