kubernetes/digital-ocean/ingress/ghost-ingress-tls-stg.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - ghost.cmscallbackinsanity.com
    secretName: letsencrypt-staging
  rules:
  - host: ghost.callbackinsanity.com
    http:
      paths:
      - backend:
          serviceName: ghost
          servicePort: 80
